--- a/script/install
+++ b/script/install
@@ -6,9 +6,12 @@ set -e
 
 cd "$(dirname $0)"/..
 
-# Run Homebrew through the Brewfile
-# echo "› brew bundle"
-# brew bundle
+# Run Homebrew through the Brewfile for macOS
+if [ "$(uname -s)" == "Darwin" ]
+then
+    echo "› brew bundle"
+    brew bundle
+fi
 
 # find the installers and run them iteratively
 find . -name install.sh | while read installer ; do sh -c "${installer}" ; done
